--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "start": "vite"
   },
   "dependencies": {
+    "axios": "^1.7.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
